# Fedora-DNF-GUI-Tool

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASING.md  build-rpm.sh  fix_headers.py  fix_indent.py  install.sh  pyproject.toml
.github/: ABOUT.md
assets/: dnf-gui.desktop
packaging/: dnf-gui.metainfo.xml  dnf-gui.spec
src/dnf_gui/: __init__.py  __main__.py  app.py
src/dnf_gui/core/: dnf_backend.py  flatpak_backend.py  package.py  system_info.py  updater.py  worker.py
src/dnf_gui/ui/: main_window.py  sidebar.py
src/dnf_gui/ui/pages/: flatpak_page.py  history_page.py  installed_page.py  repo_manager_page.py  search_page.py  system_info_page.py  terminal_page.py  toolkit_page.py  updates_page.py
src/dnf_gui/ui/styles/: theme.py
src/dnf_gui/ui/widgets/: package_card.py  progress_bar.py  status_bar.py
src/dnf_gui/utils/: helpers.py
tests/: test_dnf_backend.py
