[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedora-dnf-gui"
version = "1.0.0"
description = "A modern GUI package manager for Fedora Linux"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"
authors = [
    {name = "Greg.Tech", email = "hello@greg.tech"},
]
keywords = ["fedora", "dnf", "package-manager", "gui", "kde", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "PyQt6>=6.6.0",
]

[project.urls]
Homepage = "https://greg.tech"
Repository = "https://github.com/gregtech/fedora-dnf-gui"
Issues = "https://github.com/gregtech/fedora-dnf-gui/issues"

[project.scripts]
fedora-dnf-gui = "src.dnf_gui.app:main"

[project.gui-scripts]
fedora-dnf-gui-desktop = "src.dnf_gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
